--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     outline: 0;
     font-size: 100%;
     font-weight: normal !important;
-    font-family: FONTNAME, sans-serif; /*CHANGE FONTNAME HERE*/
+    font-family: 'CircularMedium', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-transform: none;
     text-decoration: none;
     vertical-align: baseline;
@@ -46,12 +46,36 @@ body {
 
 
 /* ============FONTS============ */
-@font-face {font-family: 'FONTNAME';
+@font-face {font-family: 'CircularBlack';
     /* src: url('../assets/fonts/FONTNAME.otf') format('opentype'); */
-    src: url('../assets/fonts/FONTNAME.eot') format('embedded-opentype');
-    src: url('../assets/fonts/FONTNAME.ttf') format('truetype');
-    src: url('../assets/fonts/FONTNAME.woff') format('woff');
-    src: url('../assets/fonts/FONTNAME.woff2') format('woff2');
+    src: url('../assets/fonts/CircularStd-Black.eot') format('embedded-opentype');
+    src: url('../assets/fonts/CircularStd-Black.ttf') format('truetype');
+    src: url('../assets/fonts/CircularStd-Black.woff') format('woff');
+    src: url('../assets/fonts/CircularStd-Black.woff2') format('woff2');
+}
+
+@font-face {font-family: 'CircularBold';
+    /* src: url('../assets/fonts/FONTNAME.otf') format('opentype'); */
+    src: url('../assets/fonts/CircularStd-Bold.eot') format('embedded-opentype');
+    src: url('../assets/fonts/CircularStd-Bold.ttf') format('truetype');
+    src: url('../assets/fonts/CircularStd-Bold.woff') format('woff');
+    src: url('../assets/fonts/CircularStd-Bold.woff2') format('woff2');
+}
+
+@font-face {font-family: 'CircularMedium';
+    /* src: url('../assets/fonts/FONTNAME.otf') format('opentype'); */
+    src: url('../assets/fonts/CircularStd-Medium.eot') format('embedded-opentype');
+    src: url('../assets/fonts/CircularStd-Medium.ttf') format('truetype');
+    src: url('../assets/fonts/CircularStd-Medium.woff') format('woff');
+    src: url('../assets/fonts/CircularStd-Medium.woff2') format('woff2');
+}
+
+@font-face {font-family: 'CircularRegular';
+    /* src: url('../assets/fonts/FONTNAME.otf') format('opentype'); */
+    src: url('../assets/fonts/CircularStd-Regular.eot') format('embedded-opentype');
+    src: url('../assets/fonts/CircularStd-Regular.ttf') format('truetype');
+    src: url('../assets/fonts/CircularStd-Regular.woff') format('woff');
+    src: url('../assets/fonts/CircularStd-Regular.woff2') format('woff2');
 }
 
 ::selection {
@@ -59,6 +83,10 @@ body {
 }
 ::-moz-selection {
     
+}
+
+h1 {
+    font-size: 54px;
 }
 
 
