--- a/css/style.css
+++ b/css/style.css
@@ -178,7 +178,7 @@ span.purpleText {
     font-family: 'CircularMedium', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     border-radius: 100px;
     border: 2px solid transparent;
-    padding: 12px 24px;
+    padding: 12px 16px;
     transition: var(--transition);
     -moz-transition: var(--moz-transition);
     -webkit-transition: var(--webkit-transition);
@@ -263,7 +263,7 @@ span.purpleText {
     display: flex;
     flex-direction: column;
     align-items: stretch;
-    max-width: 88vw;
+    max-width: 85vw;
     /* background: var(--color-white); */
     margin: 0;
   
@@ -322,33 +322,12 @@ header {
     margin-top: 32px;
 }
 
-main #challenge::before {
-    content: "";
-    background-image: url(../assets/img/backgroudPatternCarRight.png);background-size: 346px 263px;
-    position: absolute;
-    width: 346px;
-    height: 263px;
-    right: 0;
-    transform: translateY(-152px);
-}
-
 #skip {
     text-align: center;
 }
 
 #insightsIntro {
     margin-bottom: 56px;
-}
-
-main #whoDidWeWorkWith::before {
-    content: "";
-    background-image: url(../assets/img/backgroudPatternCarLeft.png);
-    background-size: 346px 263px;
-    position: absolute;
-    left: 0;
-    transform: translateY(-613px);
-    width: 346px;
-    height: 263px;
 }
 
 #conceptCards {
@@ -393,8 +372,7 @@ main #whoDidWeWorkWith::before {
 }
 
 #openPrototype {
-    text-align: center;
-    margin: 16px 0px 32px 0px;
+    display: none;
 }
 
 #resultUitleg {
@@ -413,16 +391,6 @@ main #whoDidWeWorkWith::before {
     height: 100%;
     left: 39%;
 } */
-
-main #motionMatrix::before {
-    content: "";
-    background-image: url(../assets/img/backgroudPatternCarRight.png);background-size: 346px 263px;
-    position: absolute;
-    width: 346px;
-    height: 263px;
-    right: 0;
-    transform: translateY(-152px);
-}
 
 
 
@@ -457,6 +425,10 @@ img {
 
 .imgDesktop {
     display: none;
+}
+
+#teamImage img {
+    height: 100%;
 }
 
 .purpleBG {
@@ -543,6 +515,39 @@ ul.nav-tabs .nav-item img {
 
 @media only screen and (min-width: 992px) {
     /* ============LAYOUTS GENERAL============ */
+    main #challenge::before {
+        content: "";
+        background-image: url(../assets/img/backgroudPatternCarRight.png);
+        background-size: 346px 263px;
+        position: absolute;
+        width: 346px;
+        height: 263px;
+        right: 0;
+        transform: translateY(-152px);
+    }
+    
+    main #whoDidWeWorkWith::before {
+        content: "";
+        background-image: url(../assets/img/backgroudPatternCarLeft.png);
+        background-size: 346px 263px;
+        position: absolute;
+        left: 0;
+        transform: translateY(-613px);
+        width: 346px;
+        height: 263px;
+    }
+
+    main #motionMatrix::before {
+        content: "";
+        background-image: url(../assets/img/backgroudPatternCarRight.png);
+        background-size: 346px 263px;
+        position: absolute;
+        width: 346px;
+        height: 263px;
+        right: 0;
+        transform: translateY(-152px);
+    }
+
     #conceptChosen::after {
         content: "";
         background-image: url(../assets/img/conceptLine.svg);
@@ -562,6 +567,12 @@ ul.nav-tabs .nav-item img {
         transform: scale(0.77);
         margin-left: -4px;
     }
+
+    #openPrototype {
+        display: block;
+        text-align: center;
+        margin: 16px 0px 32px 0px;
+    }
     /* ============LAYOUTS COMPONENTS============ */
     .cardFirst, .cardSecond, .cardThird {
         margin-bottom: 0;
@@ -570,6 +581,12 @@ ul.nav-tabs .nav-item img {
     .purpleBG .card {
         border-radius: 24px 24px 0px 0px;
         border-bottom: none;
+    }
+}
+
+@media only screen and (min-width: 1200px) {
+    main #whoDidWeWorkWith::before {
+        transform: translateY(-683px);
     }
 }
 
