--- a/css/style.css
+++ b/css/style.css
@@ -37,10 +37,10 @@ body {
     --color-purple: #8641F2;
     --color-purple300: #F5F0FE;
 
-    --transition: all .24s ease-in 0s;
-    --moz-transition: all .24s ease-in 0s;
-    --webkit-transition: all .24s ease-in 0s;
-    --o-transition: all .24s ease-in 0s;
+    --transition: all .16s ease-in 0s;
+    --moz-transition: all .16s ease-in 0s;
+    --webkit-transition: all .16s ease-in 0s;
+    --o-transition: all .16s ease-in 0s;
 }
 
 
@@ -174,6 +174,22 @@ span.purpleText {
 
 
 /* ============LINKS & BUTTONS============ */
+a {
+    font-family: 'CircularBold', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: var(--color-purple);
+    transition: var(--transition);
+    -moz-transition: var(--moz-transition);
+    -webkit-transition: var(--webkit-transition);
+    -o-transition: var(--o-transition);
+    cursor: pointer;
+}
+
+a:hover {
+    color: var(--color-purple);
+    opacity: 0.8;
+    text-decoration: none;
+}
+
 .button {
     font-family: 'CircularMedium', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     border-radius: 100px;
@@ -187,10 +203,15 @@ span.purpleText {
     display: inline-block;
 }
 
+a.button:hover {
+    opacity: 1;
+}
+
 .button-primary, .button-primary:hover {
     color: var(--color-white);
     background-color: var(--color-purple);
     text-decoration: none;
+    opacity: 1;
 }
 
 .button-secondary, .nav-tabs .nav-link {
@@ -411,6 +432,10 @@ header {
     margin-bottom: 56px;
 }
 
+.centeredRow a img {
+    margin-bottom: 0px;
+}
+
 img { 
     width: 100%;
 }
@@ -475,6 +500,7 @@ ul.nav-tabs .nav-item img {
 
     p {
         font-size: 18px;
+        line-height: 28px;
     }
 
     /* ============LAYOUTS GENERAL============ */
