--- a/css/style.css
+++ b/css/style.css
@@ -277,6 +277,7 @@ a.button:hover {
 }
 
 
+
 /* ============LAYOUTS GENERAL============ */
 #videoOverlay {
     display: flex;
@@ -355,6 +356,11 @@ header {
     display: flex;
     align-items: center;
     padding: 120px 0px;
+}
+
+header img {
+    width: 136px;
+    margin-bottom: 16px;
 }
 
 #challenge img {
@@ -451,6 +457,10 @@ footer {
 }
 
 /* ============LAYOUTS COMPONENTS============ */
+#stickyNav {
+    display: none;
+}
+
 .sectionSpaceTop {
     padding-top: 146px;
 }
@@ -646,6 +656,62 @@ ul.nav-tabs .nav-item img {
 }
 
 @media only screen and (min-width: 1200px) {
+    /* ============LAYOUTS COMPONENTS============ */
+    #stickyNav {
+        width: 100%;
+        display: block;
+        position: fixed;
+        background-color: var(--color-white);
+        opacity: 1;
+        z-index: 1000;
+        /* box-shadow: 4px 24px 40px rgba(12, 24, 61, 0.12); */
+        box-shadow: 0px 0px 10px rgba(12, 24, 61, 0.03);
+    }
+
+    .bg-light {
+        background-color: var(--color-white) !important;
+    }
+
+    nav.navbar {
+        padding: 0.5rem 0rem;
+        /* justify-content: space-between; */
+    }
+
+    nav .collapse.navbar-collapse {
+        /* justify-content: flex-end; */
+        justify-content: center;
+    }
+
+    .navbar-brand img {
+        width: 136px;
+    }
+
+    nav a {
+        font-family: 'CircularMedium', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-size: 14px;
+    }
+
+    .navbar-light .navbar-nav .nav-item a#introLink.nav-link {
+        padding-left: 0px;
+    }
+
+    .navbar-light .navbar-nav .nav-item a#caseVideoLink.nav-link {
+        padding-right: 0px;
+    }
+
+    .navbar-light .navbar-nav .nav-link {
+        color: var(--color-gray600)
+    }
+
+    .navbar-light .navbar-nav .nav-link:hover {
+        color: var(--color-purple);
+    }
+
+    .navbar-light .navbar-nav .show > .nav-link, .navbar-light .navbar-nav .active > .nav-link, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .nav-link.active {
+        color: var(--color-black);
+    }
+
+    /* ============LAYOUTS GENERAL============ */
     main #whoDidWeWorkWith::before {
         transform: translateY(-683px);
     }
