added hidden loading animation fade

--- a/css/style.css
+++ b/css/style.css
@@ -726,6 +726,6 @@ ul.nav-tabs .nav-item img {
 
 
 /* ============ANIMATIONS============ */
-/* div.hidden {
+div.hidden {
     display: none;
-} */
+}
