--- a/css/style1601.css
+++ b/css/style1601.css
@@ -357,6 +357,27 @@ video {
     width: 80vw;
     height: 80vh;
 } */
+/* 
+.videoWrapper {
+    width: 80vw;
+    height: 80vh;
+} */
+
+.videoWrapper{
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 25px;
+    height: 0;
+    width: 80vw;
+}
+
+iframe.caseVideo {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
 
 header {
     min-height: 100vh;
@@ -469,7 +490,7 @@ header img {
 }
 
 #proto02Left {
-    border-radius: 8px;
+    /* border-radius: 8px; */
     box-shadow: 0px 0px 10px rgba(12, 24, 61, 0.03);
 }
 
@@ -484,7 +505,7 @@ header img {
     align-items: center;
 }
 
-#caseVideoBottom img {
+#caseVideoBottom iframe {
     border-radius: 24px;
     box-shadow: 4px 24px 40px rgba(12, 24, 61, 0.12);
 }
