--- a/css/style2201.css
+++ b/css/style2201.css
@@ -265,6 +265,10 @@ a.button:hover {
     border-color: var(--color-purple);
 }
 
+#usageGuide {
+    margin-top: 24px;
+}
+
 #prototypingExplained .button.button-secondary {
     padding: 12px 12px 8px 12px;
 }
